--- a/assignment-3/personality-generator.ipynb
+++ b/assignment-3/personality-generator.ipynb
@@ -8,7 +8,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "eac3d8f8",
    "metadata": {},
    "outputs": [],
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "922b1f91",
+   "execution_count": 2,
+   "id": "1b7c2c82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "76993827",
+   "execution_count": 3,
+   "id": "5a36f1bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "f29fbd3b",
+   "execution_count": 4,
+   "id": "328a525c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "id": "1c6ea756",
    "metadata": {},
    "outputs": [],
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "4523ebde",
+   "execution_count": 6,
+   "id": "cd03e9f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "id": "628e5ac4",
    "metadata": {},
    "outputs": [
@@ -130,18 +130,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THE EVEN-TEMPERED\n",
+      "THE ARDENT\n",
       "\n",
-      "Even-tempered people's main traits are validation and worry. They are also self-discipline, creation, and swiftness.\n",
+      "Ardent people's main traits are romanticism and passage. He are also deconstruction.\n",
       "\n",
-      "Basic Fears: Looking for an opportunity to take offense, refusing to re-evaluate a schedule or program, even when it's clearly no longer appropriate, and refusing to do your part.\n",
-      "Basic Desires: Getting all the facts and taking that critical first step.\n",
+      "Basic Fears: Pretending to knowledge or sophistication you do not possess and allowing base instincts to govern your life.\n",
+      "Basic Desires: Seeing the interconnection of all things and people, admitting you need help, and knowing the difference between needs and wants.\n",
       "\n",
       "SKETCH\n",
-      "After their worry, an even-tempered\n",
+      "Due to his passage, an ardent\n",
       "\n",
       "COMPATIBILITY\n",
-      "By dint of worry and looking for an opportunity to take offense, EVEN-TEMPERED is best suited with a SOUR type.\n"
+      "On grounds of passage and pretending to knowledge or sophistication you do not possess, ARDENT is best suited with a GUARDED type.\n"
      ]
     }
    ],
@@ -175,26 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "b7d00105",
+   "execution_count": 8,
+   "id": "0ca57044",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THE CYNICAL\n",
+      "THE COLD\n",
       "\n",
-      "Cynical people's main traits are wealth and investigation. They are also composure.\n",
+      "Cold people's main traits are affirmation and illumination. They are also wealth and renewal.\n",
       "\n",
-      "Basic Fears: Rushing through your work, beating yourself up over past mistakes, and being so eager to \"do it yourself\" that you hinder your own progress.\n",
-      "Basic Desires: Finding the silver lining in a dark cloud and indulging in romantic fantasy.\n",
+      "Basic Fears: Failing to take a stand, pandering to the tastes of others, and numbing yourself to spiritual yearnings.\n",
+      "Basic Desire: Sharing in a great celebration.\n",
       "\n",
-      "ABRIDGMENT\n",
-      "Owing to their investigation, a cynical\n",
+      "PRECIS\n",
+      "As a consequence of their illumination, a cold\n",
       "\n",
       "COMPATIBILITY\n",
-      "Through investigation and rushing through your work, CYNICAL is best suited with a NERVOUS type.\n"
+      "By reason of illumination and failing to take a stand, COLD is best suited with an AMAZING type.\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8824b56e",
+   "id": "1376de78",
    "metadata": {},
    "source": [
     "# helping chaski w regex and keeping this for my notes\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "id": "38c86dd5",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        " 'also ']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,14 +283,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "9e4b6b8e",
+   "execution_count": 10,
+   "id": "c5bea1cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/javascript": [
+       "IPython.notebook.execute_cells_below()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
-       "<body><p>THE BEAUTIFUL<br><br>Beautiful people's main traits are productivity and mindset. They are also spirituality, bravery, and hope.<br><br>Basic Fears: Using your creativity to get out of honest work and being sexually selfish.<br>Basic Desire: Reaching a beneficial agreement based on sound information.<br><br>SUMMARY<br>By reason of their mindset, a BEAUTIFUL type gloomies to acknowledging that you've hit bottom. They are dismayed greatly.<br><br>COMPATIBILITY<br>Following mindset and using your creativity to get out of honest work, BEAUTIFUL is best suited with a DEFT type.</p></body></html>"
+       "<body><p>THE EXCELLENT<br><br>Excellent people's main traits are conservation and student. They are also moodiness and skill.<br><br>Basic Fears: Obsessing on rules and regulations and ignoring or breaking agreements with those who have invested in you.<br>Basic Desire: Starting a savings plan.<br><br>SUMMARY<br>On the strength of their student, an EXCELLENT type enthralleds to asking for assistance. They are infuriated greatly.<br><br>COMPATIBILITY<br>As a result of student and obsessing on rules and regulations, EXCELLENT is best suited with an IMPETUOUS type.</p></body></html>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -304,7 +316,35 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1e4824f456246dbb025e63a3e40a16c",
+       "model_id": "481a124744f742258a226308800b3945",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='NEW PERSONALITY', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<body><p>THE MEDDLESOME<br><br>Meddlesome people's main traits are decision and budgeting. They are also passion and meditation.<br><br>Basic Fears: Taking unnecessary risks, restricting access to spiritual truths or the gods, and failing to deliver what you've promised.<br>Basic Desire: Saving for a rainy day.<br><br>SUMMARY<br>On account of their budgeting, a MEDDLESOME type indecisives to refusing to think about unhealthy or unethical options. They are outraged greatly.<br><br>COMPATIBILITY<br>On the strength of budgeting and taking unnecessary risks, MEDDLESOME is best suited with a CARELESS type.</p></body></html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {
+      "isolated": true
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b2d7ca386334b0791bd540e1f92e88b",
        "version_major": 2,
        "version_minor": 0
       },
