--- a/assignment-2/assignment-2.ipynb
+++ b/assignment-2/assignment-2.ipynb
@@ -2535,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "id": "93f4812c",
    "metadata": {},
    "outputs": [
@@ -2543,225 +2543,226 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          a little      rabbit      sat   on  a bank.\n",
+      "   morning       a       rabbit      sat   on  a\n",
       "\n",
-      "         his                       trit-trot,\n",
       "\n",
-      "                          it             Mr.   McGregor,\n",
-      "                        in  her       bonnet.\n",
       "\n",
-      "                                             down        the\n",
-      "road,                    a            a             upon\n",
-      "relations,             lived     in  the   wood    at  the\n",
-      "of  Mr.   McGregor's\n",
+      "    was   coming           the          was   driven\n",
+      "Mr.   McGregor,\n",
+      "beside      him   sat   Mrs.    McGregor        in  her\n",
+      "bonnet.\n",
       "\n",
-      "THAT           full    of        holes;      and   in  the\n",
-      "of\n",
-      "                    Mopsy,      Cotton-tail\n",
-      "Peter.\n",
+      "      as  they       passed,                     Bunny\n",
+      "the\n",
+      "                    a     skip       a jump--to\n",
+      "          who   lived     in         at         of\n",
+      "McGregor's\n",
       "\n",
-      "Old                 widow;      she   earned         living\n",
-      "by  knitting\n",
-      "                  and   muffetees         (I  once    bought\n",
-      "a pair    at  a bazaar).\n",
-      "She   also    sold    herbs,      and   rosemary        tea,\n",
-      "and   rabbit-tobacco              (which      is  what\n",
+      "        was   full    of        holes;         in  the\n",
+      "sandiest        hole    of\n",
+      "\n",
+      "\n",
+      "                                         by\n",
+      "rabbit-wool                  and                  bought\n",
+      "at\n",
+      "   also    sold    herbs,      and               and\n",
+      "rabbit-tobacco              (which        what\n",
       "WE  call    lavender).\n",
       "\n",
-      "LITTLE      Benjamin                      want    to  see\n",
-      "his   Aunt.\n",
+      "LITTLE      Benjamin           not   very    much    want\n",
+      "to  see      Aunt.\n",
       "\n",
-      "  came                                 nearly\n",
-      "top\n",
-      "of  his\n",
-      "\n",
-      "PETER     was                                      was\n",
-      "red\n",
-      "cotton      pocket-handkerchief.\n",
-      "\n",
-      "\"Peter,\"--said                    Benjamin,\n",
+      "  came    round     the       of  the   fir-tree,\n",
+      "nearly      tumbled       upon    the   top\n",
       "\n",
       "\n",
-      "PETER     replied--\"The             scarecrow           Mr.\n",
-      "McGregor's                     described\n",
-      "                       the\n",
+      "PETER                                        and\n",
+      "      pocket-handkerchief.\n",
+      "\n",
+      "                             in                      your\n",
+      "clothes?\"\n",
+      "\n",
+      "                  scarecrow              McGregor's\n",
+      "described\n",
+      "how   he  had   been    chased      about               and\n",
+      "had   dropped               and\n",
+      "coat.\n",
+      "\n",
+      "              sat             his\n",
+      "McGregor        had   gone    out   in   gig,    and\n",
+      "McGregor        also;     and   certainly\n",
+      "   the                 was   wearing       her   best\n",
+      "\n",
+      "PETER     said    he  hoped     that    it  would     rain.\n",
+      "\n",
+      "At            old       Rabbit's\n",
       "\n",
       "\n",
-      "                 down                    and   assured\n",
-      "him\n",
-      "McGregor        had       out   in   gig,    and   Mrs.\n",
-      "McGregor        also;     and\n",
+      "Peter         he  thought       he           better      if\n",
+      "he  went    for\n",
+      "\n",
+      "                                           of\n",
+      "the   bottom        the   wood.     From    here    they\n",
+      "into    Mr.\n",
+      "                     shoes\n",
+      "scarecrow,          topped      with    an  old   tam-o-\n",
+      "shanter             of  Mr.   McGregor's.\n",
+      "\n",
+      "              said,                             to\n",
+      "under     a\n",
+      "     the         way   to          to  climb         a\n",
+      "\n",
+      "Peter                          it\n",
+      "bed\n",
+      "below             raked     and   quite\n",
+      "\n",
+      "                 lettuces.\n",
+      "\n",
+      "                                        over\n",
+      "especially          little      Benjamin,         who   was\n",
+      "wearing       clogs.\n",
       "\n",
       "\n",
-      "PETER         he  hoped         it       rain.\n",
-      "\n",
-      "               Mrs.                               the\n",
-      "                      Cotton-tail!            fetch     some\n",
-      "more    camomile!\"\n",
-      "\n",
-      "         he         he           better      if  he  went\n",
-      "\n",
-      "    went        hand           and      upon    the   flat\n",
-      "of  the\n",
-      "   bottom                    here    they    looked\n",
-      "down    into    Mr.   McGregor's\n",
-      "              coat\n",
-      "          topped      with         tam-o-shanter\n",
-      "of  Mr.\n",
-      "\n",
-      "      Benjamin             \"It   spoils\n",
-      "gate;     the         way   to     in,   is  to  climb\n",
-      "down\n",
-      "\n",
-      "Peter                            was\n",
-      "below     was   newly     raked     and   quite     soft.\n",
-      "\n",
-      "         sown    with\n",
-      "\n",
-      "                                        over    the\n",
-      "          little\n",
-      "\n",
-      "                                       done\n",
-      "       clothes,                                  to\n",
+      "       clothes,          order                  be\n",
       "\n",
       "\n",
-      "They        them    off      scarecrow.          There\n",
-      "had   been    rain    during         night;\n",
-      "                        and      coat\n",
+      "They        them    off   the   scarecrow.          There\n",
+      "had   been    rain    during      the   night;\n",
+      "               the            the                  shrunk.\n",
       "\n",
-      "Benjamin             on                           too\n",
       "\n",
-      "    he  suggested         that    they    should      fill\n",
-      "the\n",
+      "\n",
+      "\n",
       "onions,       as  a little      present       for   his\n",
       "Aunt.\n",
       "\n",
-      "     did   not   seem    to  be  enjoying        himself;\n",
+      "        not   seem    to  be  enjoying        himself;\n",
       "he  kept    hearing       noises.\n",
       "\n",
-      "Benjamin,         on  the            was   perfectly\n",
-      "at  home,     and   ate    lettuce\n",
-      "       said    that           the                  the\n",
+      "Benjamin,         on  the   contrary,         was\n",
+      "perfectly         at  home,     and   ate   a lettuce\n",
+      "leaf.       said        he  was   in     habit     of\n",
+      "coming      to           with    his\n",
+      "                      their\n",
       "\n",
+      "          little                          Mr.\n",
       "\n",
-      "                          papa       old\n",
+      "The   lettuces        certainly         were    very\n",
+      "fine.\n",
       "\n",
-      "           certainly\n",
+      "        not                 said                  go  home.\n",
+      "he         half    the   onions.\n",
       "\n",
-      "PETER        not   eat   anything;         he  said    he\n",
-      "should      like    to    home.\n",
-      "he  dropped              onions.\n",
-      "\n",
-      "LITTLE      Benjamin        said    that    it  was   not\n",
+      "              said    that    it  was   not   possible\n",
       "to  get   back    up  the\n",
-      "pear-tree,              a     of  vegetables.           He\n",
-      "boldly\n",
-      "other     end   of                    along     a little\n",
-      "on\n",
+      "pear-tree,          with     load    of  vegetables.\n",
+      "He  led   the      boldly      towards       the\n",
+      "other                    They        along      little\n",
+      "on  planks,       under\n",
       "a sunny              wall.\n",
       "\n",
-      "   mice       on                         cherry-stones,\n",
-      "they\n",
-      "                            Bunny.\n",
+      "The   mice    sat   on  their     door-steps\n",
+      "cracking        cherry-stones,              they    winked\n",
+      "at\n",
+      "Peter     Rabbit      and         Benjamin        Bunny.\n",
       "\n",
-      "PRESENTLY         Peter     let   the   pocket-handkerchief\n",
-      "again.\n",
+      "PRESENTLY              let   the   pocket-handkerchief\n",
+      "go\n",
       "\n",
-      "    got   amongst       flower-pots,            and   frames\n",
-      "and   tubs;     Peter          noises\n",
-      "worse\n",
+      "THEY    got   amongst       flower-pots,            and\n",
+      "frames      and   tubs;     Peter     heard     noises\n",
+      "     than         his       were    as  big   as  lolly-\n",
+      "pops!\n",
       "\n",
-      "He  was   a     or  two   in  front       his   cousin,\n",
-      "when    he  suddenly        stopped.\n",
+      "  was        or       front     of  his   cousin,       when\n",
+      "he          stopped.\n",
       "\n",
-      "THIS    is  what    those     little      rabbits       saw\n",
-      "round     that    corner!\n",
+      "      what\n",
       "\n",
-      "Little      Benjamin            one   look,        then,\n",
-      "a minute      less\n",
-      "time,       hid   himself       and   Peter     and   the\n",
-      "onions      underneath          a large\n",
-      "basket....\n",
-      "\n",
-      "THE   cat   got   up  and            herself,        and\n",
-      "came    and   sniffed       at  the\n",
+      "Little                             then,       half\n",
+      "minute      less    than\n",
+      "time,     he  hid   himself       and        and      onions\n",
+      "underneath          a\n",
       "\n",
       "\n",
-      "Perhaps       she   liked     the   smell     of\n",
+      "THE      got     and   stretched         herself,        and\n",
+      "came    and          at\n",
+      "basket.\n",
       "\n",
-      "                 upon\n",
+      "Perhaps          liked     the\n",
       "\n",
-      "SHE   sat   there     for   FIVE    HOURS.\n",
+      "                     the      of  the\n",
+      "\n",
+      "   sat               HOURS.\n",
       "\n",
       "* * * * *\n",
       "\n",
-      "I\n",
       "\n",
-      "      Peter     Rabbit         little      Benjamin\n",
+      "                 dark,\n",
       "\n",
-      "   sun           behind                   was            in\n",
-      "afternoon;                  the   cat   sat       the\n",
+      "\n",
+      "              behind                      quite\n",
+      "afternoon;             still     the   cat      upon    the\n",
       "basket.\n",
       "\n",
-      "AT  length           was   a pitter-patter,\n",
-      "pitter-patter,              and   some    bits    of\n",
-      "mortar\n",
+      "AT        there     was   a pitter-patter,\n",
+      "pitter-patter,                 some    bits    of\n",
+      "                 wall\n",
       "\n",
-      "The      looked      up  and   saw   old   Mr.   Benjamin\n",
-      "Bunny     prancing        along     the   top\n",
-      "  the         the   upper\n",
+      "   cat   looked           saw   old\n",
+      "of  the   wall    of  the   upper     terrace.\n",
       "\n",
-      "He     smoking       a       rabbit-tobacco,\n",
-      "and      a little            in  his\n",
+      "  was          a                            a\n",
       "hand.\n",
       "\n",
-      "He                  son.\n",
       "\n",
-      "OLD   Mr.   Bunny     had                      cats.\n",
       "\n",
-      "  took     tremendous              off   the   top   of  the\n",
-      "wall      to  the   top   of  the\n",
-      "cat,    and   cuffed        off             and   kicked\n",
-      "          off   a handful       of  fur.\n",
+      "   Mr.           no  opinion       whatever        of\n",
       "\n",
-      "The   cat      too       surprised         to\n",
+      "He  took                      the        the   wall\n",
+      "the        the\n",
+      "    and                        and   kicked\n",
+      "garden-house,\n",
       "\n",
-      "       Mr.   Bunny        driven      the          the\n",
-      "green-house,            he\n",
-      "the   door.\n",
       "\n",
-      "    he  came          the         and          his\n",
+      "The            much             to\n",
+      "\n",
+      "    old      Bunny     had            cat   into\n",
+      "he  locked\n",
+      "\n",
+      "\n",
+      "Then                the   basket                   son\n",
       "the\n",
-      "ears,     and   whipped          with    the   little\n",
       "\n",
-      "    he  took    out   his   nephew      Peter.\n",
       "\n",
-      "THEN      took    out   the   handkerchief            of\n",
-      "onions,       and          out   of  the\n",
-      "garden.\n",
+      "Then          out   his   nephew      Peter.\n",
       "\n",
-      "When    Mr.   McGregor        returned        about\n",
-      "an  hour    later,      he          several\n",
-      "things      which     perplexed         him.\n",
+      "    he      out   the   handkerchief            of\n",
+      "marched       out   of  the\n",
       "\n",
-      "It  looked      as  though      some    person      had\n",
-      "walking       all   over    the   garden      in\n",
-      "a     of  clogs--only                        were    too\n",
-      "ridiculously            little!\n",
       "\n",
-      "Also      could                  how   the   cat   could\n",
-      "herself       up  INSIDE      the   green-house,\n",
-      "the   door        the   OUTSIDE.\n",
+      "When    Mr.   McGregor                about         an\n",
+      "later,                several\n",
+      "      which     perplexed         him.\n",
       "\n",
-      "         got        his   mother      forgave       him,\n",
-      "because       she      so  glad    to\n",
-      "see   that    he     found     his   shoes     and   coat.\n",
+      "It                some                        all   over\n",
+      "the\n",
+      "a pair    of  clogs--only           the   foot-marks\n",
+      "too   ridiculously\n",
+      "\n",
+      "Also\n",
+      "               the   green-house,                   the\n",
+      "door        the\n",
+      "\n",
+      "WHEN                                                    glad\n",
+      "   that                      and        Cotton-tail\n",
       "and\n",
-      "up  the                       and   old   Mrs.\n",
-      "strung      up  the         and\n",
-      "hung            the   kitchen                   the\n",
+      "up  the                       and      Mrs.    Rabbit\n",
+      "strung      up  the   onions      and\n",
+      "    them        the   kitchen       ceiling,        with\n",
+      "the   rabbit-tobacco.\n",
       "\n",
-      "   END\n"
+      "THE   END\n"
      ]
     }
    ],
